--- a/config/sample_airflow_config.cfg
+++ b/config/sample_airflow_config.cfg
@@ -47,7 +47,7 @@ default_timezone = utc
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor
-executor = SequentialExecutor
+executor = CeleryExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
@@ -308,12 +308,12 @@ email_backend = airflow.utils.email.send_email_smtp
 # If you want airflow to send emails on retries, failure, and you want to use
 # the airflow.utils.email.send_email_smtp function, you have to configure an
 # smtp server here
-smtp_host = localhost
+smtp_host = email-smtp.us-west-2.amazonaws.com
 smtp_starttls = True
 smtp_ssl = False
 # Uncomment and set the user/pass settings if you want to use SMTP AUTH
-# smtp_user = airflow
-# smtp_password = airflow
+# smtp_user = smtp_user
+# smtp_password = smtp_password
 smtp_port = 25
 smtp_mail_from = airflow@example.com
 
