--- a/docker-compose-CeleryExecutor.yml
+++ b/docker-compose-CeleryExecutor.yml
@@ -16,7 +16,8 @@ services:
         #     - ./pgdata:/var/lib/postgresql/data/pgdata
 
     webserver:
-        image: puckel/docker-airflow:1.10.3
+        # image: puckel/docker-airflow:1.10.3
+        image: divinorum-webb/docker-airflow
         restart: always
         depends_on:
             - postgres
@@ -43,7 +44,8 @@ services:
             retries: 3
 
     flower:
-        image: puckel/docker-airflow:1.10.3
+        # image: puckel/docker-airflow:1.10.3
+        image: divinorum-webb/docker-airflow
         restart: always
         depends_on:
             - redis
@@ -55,7 +57,8 @@ services:
         command: flower
 
     scheduler:
-        image: puckel/docker-airflow:1.10.3
+        # image: puckel/docker-airflow:1.10.3
+        image: divinorum-webb/docker-airflow
         restart: always
         depends_on:
             - webserver
@@ -74,7 +77,8 @@ services:
         command: scheduler
 
     worker:
-        image: puckel/docker-airflow:1.10.3
+        # image: puckel/docker-airflow:1.10.3
+        image: divinorum-webb/docker-airflow
         restart: always
         depends_on:
             - scheduler
