modified Dockerfile and entrypoint.sh to allow airflow to run properly

--- a/docker-compose-CeleryExecutor.yml
+++ b/docker-compose-CeleryExecutor.yml
@@ -1,10 +1,5 @@
 version: '2.1'
 services:
-    dags:
-        image: divinorum-webb/docker-airflow
-        restart: always
-        volumes:
-            - ./dags:/usr/local/airflow/dags
     redis:
         image: 'redis:3.2.7'
         # command: redis-server --requirepass redispass
@@ -21,7 +16,6 @@ services:
         #     - ./pgdata:/var/lib/postgresql/data/pgdata
 
     webserver:
-        # image: puckel/docker-airflow:1.10.3
         image: divinorum-webb/docker-airflow
         restart: always
         depends_on:
@@ -35,11 +29,10 @@ services:
             # - POSTGRES_PASSWORD=airflow
             # - POSTGRES_DB=airflow
             # - REDIS_PASSWORD=redispass
-        volumes_from:
-            - dags
-            # - ./dags:/usr/local/airflow/dags
+        volumes:
+            - ./dags:/usr/local/airflow/dags
             # Uncomment to include custom plugins
-            # - ./plugins:/usr/local/airflow/plugins
+            - ./plugins:/usr/local/airflow/plugins
         ports:
             - "8080:8080"
         command: webserver
@@ -50,7 +43,6 @@ services:
             retries: 3
 
     flower:
-        # image: puckel/docker-airflow:1.10.3
         image: divinorum-webb/docker-airflow
         restart: always
         depends_on:
@@ -63,16 +55,14 @@ services:
         command: flower
 
     scheduler:
-        # image: puckel/docker-airflow:1.10.3
         image: divinorum-webb/docker-airflow
         restart: always
         depends_on:
             - webserver
-        volumes_from:
-            - dags
-            # - ./dags:/usr/local/airflow/dags
+        volumes:
+            - ./dags:/usr/local/airflow/dags
             # Uncomment to include custom plugins
-            # - ./plugins:/usr/local/airflow/plugins
+            - ./plugins:/usr/local/airflow/plugins
         environment:
             - LOAD_EX=n
             - FERNET_KEY=46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
@@ -84,16 +74,14 @@ services:
         command: scheduler
 
     worker:
-        # image: puckel/docker-airflow:1.10.3
         image: divinorum-webb/docker-airflow
         restart: always
         depends_on:
             - scheduler
-        volumes_from:
-            - dags
-            # - ./dags:/usr/local/airflow/dags
+        volumes:
+            - ./dags:/usr/local/airflow/dags
             # Uncomment to include custom plugins
-            # - ./plugins:/usr/local/airflow/plugins
+            - ./plugins:/usr/local/airflow/plugins
         environment:
             - FERNET_KEY=46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
             - EXECUTOR=Celery
